Fix: small-caps wrongly rendered in Linux
Small caps with Palatino Linotye in Linux are rendered too small,
especially for digits which appear in the same size as lower case
characters. This commit fixes at least the rendering for digits.

I am not sure if this is an issue of freetype, infinality or Palatino
Linotype, but it works in Windows.

--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,6 @@ input.monospace, textarea.monospace {
 }
 
 .entry .date {
-    font-variant: small-caps;
     float: left;
     margin-left: -12em;
     width: 10em;
@@ -184,6 +183,10 @@ input.monospace, textarea.monospace {
     line-height: 0.8em;
     padding-right: 0.1em;
     letter-spacing: 0em;
+}
+
+.entry .month {
+    font-variant: small-caps;
 }
 
 .entry .adminbox {
